# Cxos

./: .env.example  .gitignore  AGENTS.md  AUDIT_INTEGRATION_LAYER.md  Dockerfile  NEXT_STEPS.md  Procfile  README.md  TEST_QUALITY_ASSESSMENT.md  docker-compose.yml  fly.toml  nixpacks.toml  our_deck_agentic_ai.pptx  presentation_review_83aed3c1.pptx  presentation_review_latest.pptx  pyproject.toml  railway.json  requirements.txt
.cxo_data/: conversation.json  cxo.db  long_term_memory.json  reminders.json
.github/workflows/: ci.yml
docs/: PPT_COMPARISON.md  PPT_QA_SETUP.md
examples/: quickstart.py  scenarios_demo.py
samples/: test_ai_impact_ppt.pptx
scripts/: e2e_ppt_test.py  inspect_pptx.py  test_ppt_gmg.py
src/agentic_cxo/: __init__.py  cli.py  config.py  models.py  orchestrator.py
src/agentic_cxo/actions/: __init__.py  decision_log.py  executor.py  goal_tracker.py  scheduler.py
src/agentic_cxo/agents/: __init__.py  agent_bus.py  base.py  cfo.py  chro.py  clo.py  cmo.py  coo.py  creative_director.py  cso.py  methodology.py
src/agentic_cxo/api/: __init__.py  server.py
src/agentic_cxo/conversation/: __init__.py  agent.py  context.py  long_term_memory.py  memory.py  models.py  pattern_engine.py  product_knowledge.py  router.py  self_awareness.py  sessions.py
src/agentic_cxo/guardrails/: __init__.py  approval.py  risk.py
src/agentic_cxo/infrastructure/: __init__.py  agent_pool.py  auth.py  billing.py  database.py  encryption.py  llm_required.py  llm_retry.py  notifications.py  scheduler.py  streaming.py  teams.py  tenant.py  usage.py
src/agentic_cxo/integrations/: __init__.py  connectors.py  oauth.py  permissions.py
src/agentic_cxo/memory/: __init__.py  vault.py  versioning.py
src/agentic_cxo/pipeline/: __init__.py  chunker.py  enricher.py  ingest.py  refinery.py  summarizer.py
src/agentic_cxo/scenarios/: __init__.py  analyst.py  engine.py  registry.py
tests/: conftest.py  test_actions.py  test_api.py  test_chunker.py  test_cmo_connectors.py  test_context.py  test_conversation.py  test_enricher.py  test_guardrails.py  test_infrastructure.py  test_integrations.py  test_live_connectors.py  test_long_term_memory.py  test_new_agents.py  test_orchestrator.py  test_pattern_engine.py  test_presentation.py  test_refinery.py  test_scenarios.py  test_summarizer.py  test_tier2.py  test_tier3.py  test_tools.py  test_vault.py  test_versioning.py
(+56 files in other folders)
